objects/Bonus_BatchSetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <label>Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Req_For_First_Month__c</fullName>
        <label>Days Req For First Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Req_For_Last_Month__c</fullName>
        <label>Days Req For Last Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Run_Date__c</fullName>
        <description>Will use this field to identify what next records will be processed while running next time.</description>
        <label>Last Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduler_Cron_Expression__c</fullName>
        <label>Scheduler Cron Expression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bonus_BatchSetting</label>
</CustomObject>